# mneme

./: .coverage  .env.example  .gitignore  AGENTS.md  ASSESSMENT_01_DRIFT_FIXLIST.md  ASSESSMENT_02_MATH_FRONTEND_TASKS.md  ASSESSMENT_03_BKT_IRT_DESIGN.md  CLAUDE.md  Dockerfile  KU_CONTENT_RECOVERY.md  MNEME-PHASE1-D1D3-DECISIONS-001.md  MNEME-W3-IMPL-SPEC-001.md  MNEME-W4-IMPL-SPEC-001.md  MNEME_3O元素清单与入库SPEC.md  MNEME_3O实施规格_代码级.md  MNEME_EDU_AUDIT_20260630.md  MNEME_EDU_AUDIT_20260702.md  MNEME_HANDOFF.md  MNEME_MASTER_DESIGN.md  MNEME_MOAT_ROADMAP_20260702.md  MNEME_价值重构.md  PRD_自我助学系统_v1.2.md  PRD_自我助学系统_v1.3_技术增强版.md  PRD_高考作战指挥系统_v1.0.md  PRD_高考作战指挥系统_v1.1.md  README.md  SKILL.md  SPEC.md  SPEC_v2_Mneme_3O机制增强版.md  TASKS.md  bkt.py  cmm_math_SOURCE.txt  cognitive_state.py  docker-compose.override.yml  docker-compose.yml  fsrs_engine.py  main.py  pyproject.toml  requirements.txt  test_engine.py  (+3 more)
alembic/: env.py
alembic/versions/: 00fd98e3ad80_add_mastery_confirmed.py  0309de38ca92_add_textbook_bindings.py  1a2b3c4d5e6f_add_transfer_probe_source.py  296800f14b43_normalize_textbook_subject_to_english.py  2b3c4d5e6f7a_add_nonmath_interaction_sources.py  2d9a0d6e3a53_add_email_registration.py  346cdca5680a_drop_orphan_province_and_dead_tables.py  37dca26607ff_add_fsrs_card_json_to_kc_mastery.py  3a1f8b920c47_add_has_text_layer_to_textbook_files.py  4163dbfe589e_baseline.py  4bc93a14fea8_add_ku_exam_region_and_edition_variant.py  4ebc8f4ef067_add_textbooks_clusters_units_and_users_.py  51e587e6c96c_add_needs_image_and_normalize_wq_subject.py  54bdd75b827d_add_ku_match_meta_to_wrong_questions.py  (+40 more)
cli/: mneme_cli.py
curriculum_standards/: G7上_全册_实测.json  人教版七年级_第一章_KU.json  人教版七年级_第一章_有理数.txt  人教版七年级数学上_全文.txt  人教版九年级_二次函数_KU.json  人教版九年级_二次函数_KU报告.txt  人教版九年级_二次函数章节.txt  人教版数学全册清单.json  数学KU批量提取完工报告.txt  数学KU批量提取报告.txt  数学闭环链路验证报告.txt  高中_数学_KU.json  高中_数学_KU_列表.txt  高中_数学_KU_对照.txt
data/: curriculum_std.py  guangdong_math_kc.py  kc_std_alignment.py
frontend/: DEPRECATED.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mneme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
obase/: cognitive_store.py  config.py  db.py  llm.py  prior_provider.py  provider_registry.py
omodul/: auth.py  cognitive.py  paper.py
oprim/: bkt.py  fsrs_engine.py  llm_oprims.py  types.py
oskill/: cognitive_state.py  cognitive_update.py  paper_grading.py
outputs/: A1-ASYNC-SESSION-FACTORY-INCIDENT.md  A2-FONT-SUBSTITUTION-CAVEAT.md  AA9B-RELINK-RECORD.md  AA9C-REMATCH-RECORD.md  BLOCKS-BUG-OMarkdownRenderer-runSync.md  KNOWLEDGE-HUB-INVENTORY-001.md  S3-BLOCKER-REPORT.md  S3B-CADDY-REQUIREMENT.md  S4-Z-BACKTEST-FEASIBILITY.md  SEED-PURGE-RECORD.md  W2-CLOSE-001.md  W2C-CLOSE-001.md  W3-CLOSE-001.md  W3-PENDING-ITEMS.md  W4-CLOSE-001.md  W4-PREWORK-INVENTORY-001.md  W4-S0-CLOSE-001.md  W4-SOLVE-CLOSE-001.md  W4-VISUALIZE-CLOSE-001.md  W5-PREWORK-INVENTORY-001.md  aa9b_relink_report.json  aa9b_relink_snapshot.json  aa9c_rematch_report.json  ku_chunk_review.csv  s1_grading_failures.json  seed_purge_snapshot.json
scripts/: apply_ku_chunk_review.py  backfill_ku_provenance.py  backfill_vocab_glosses.py  backup.sh  build_s1_grading_fixture.py  check.sh  chengyu_audit.py  chengyu_bulk_enrich.py  chengyu_cleanup.py  chengyu_enrich.py  chengyu_gaokao_import.py  chengyu_merge.py  chinese_002_audit.md  chinese_bx_shang_review.md  chinese_bxs_kus_raw.json  chinese_g9_pilot_review.md  clean_ku_prerequisites.py  consolidate_nonmath_kc.py  download_smartedu_textbooks.py  dump_routes.py  enrich_ku_content.py  export_ku_chunk_review.py  export_ku_package.py  extract_chinese_hs_002.py  extract_chinese_hs_batch.py  extract_chinese_ku_batch.py  extract_chinese_middle_batch.py  extract_chinese_middle_pilot.py  extract_curriculum_ku.py  extract_math_ku_batch.py  extract_physics_ku_batch.py  extract_physics_ku_local.py  import_bx2_pdf.py  import_ceval_questions.py  import_cmm_math.py  import_cmmlu_questions.py  import_english_vocab_reading.py  import_gaokao_questions.py  import_ku_package.py  import_textbooks.py  (+22 more)
services/: __init__.py  accessibility_service.py  alert_service.py  anon.py  auth_deps.py  auth_service.py  book_block_generators.py  calibration_service.py  chat_router.py  cognitive_service.py  daily_plan_prefs_service.py  daily_plan_service.py  evaluation_service.py  experiment_service.py  feature_flags.py  fsrs_optimize_service.py  gate_store.py  graded_reading_service.py  instant_solve_service.py  kernel_selfcheck.py  knowledge_hub_search.py  ku_ingest_service.py  learner_model.py  learning_metrics_service.py  logging_config.py  main.py  mastery_gate_service.py  math_grade.py  mcp_router.py  memory.py  mission_service.py  models.py  partner_channels.py  path_builder.py  persona_store.py  physics_service.py  placement_service.py  privacy.py  progress_assembler.py  purge_service.py  (+19 more)
tasks/: __init__.py  alert_tasks.py  calibration_tasks.py  celery_app.py  evaluation_tasks.py  fsrs_optimize_tasks.py  memory_tasks.py  paper_tasks.py  partner_heartbeat.py  partner_tasks.py  purge_tasks.py  textbook_tasks.py
tests/: conftest.py  test_ability.py  test_accessibility.py  test_admin_identity.py  test_affect.py  test_alert_checks.py  test_alert_support.py  test_answer_policy.py  test_api.py  test_audit_log.py  test_auth.py  test_auth_email.py  test_authz.py  test_bkt_single_source.py  test_book_block_generators.py  test_book_block_generators_no_gating_coupling.py  test_book_compile.py  test_book_compile_no_gating_coupling.py  test_book_reader_api.py  test_calibration_flywheel.py  test_chat_router.py  test_chinese_track.py  test_choice_options.py  test_cli_mneme.py  test_cli_no_guard_bypass.py  test_cognitive_service.py  test_curriculum_std.py  test_daily_mission_interleave.py  test_daily_plan.py  test_daily_plan_interleave.py  test_daily_plan_prefs.py  test_dod_e2e.py  test_email_provider.py  test_embed_chunks.py  test_engine.py  test_error_journal.py  test_essay_guide.py  test_evaluation_harness.py  test_exam_aware.py  test_experiment.py  (+111 more)
(+154 files in other folders)
