[project]
name = "mneme"
version = "0.1.0"
description = "Mneme: A personal learning growth archive and self-study tool."
authors = [
    {name = "Mneme Team"}
]
dependencies = [
    "fsrs>=5.0",
    "sympy>=1.12",
    "numpy>=1.26",
    "anthropic>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "celery>=5.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",
]
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
