[project]
name = "mneme"
version = "0.1.0"
description = "Mneme: A personal learning growth archive and self-study tool."
authors = [
    {name = "Mneme Team"}
]
dependencies = [
    "fsrs>=5.0",
    "sympy>=1.12",
    "numpy>=1.26",
    "anthropic>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "celery>=5.3",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",
    "obase @ file:///home/soffy/projects/platform/3O/obase",
    "oprim @ file:///home/soffy/projects/platform/3O/oprim",
    "oskill @ file:///home/soffy/projects/platform/3O/oskill",
    "omodul @ file:///home/soffy/projects/platform/3O/omodul",
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["services", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# vendor 优先：用 mneme 自带的内核副本（含 edu-audit 改动），不受共享 platform/3O
# 被切分支影响。见 vendor/README。
pythonpath = ["vendor", "."]
addopts = "--cov=services --cov-report=term-missing"
markers = [
    "moat: moat_eval CI 守卫（重测试，默认跳过，MOAT=1 时才运行）",
]

[tool.coverage.run]
source = ["services"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# vendor/ 是 3O 内核的 vendored 副本（上游有自己的 CI），不在本仓 lint 范围。
exclude = ["main.py", "test_engine.py", "mnt", ".venv", "vendor"]

[tool.ruff.lint.per-file-ignores]
# scripts/ 是一次性数据管线脚本（抽取/合并/导入/审计），不进运行时主库。
# 对其放宽纯风格规则：E701/E702(单行多语句)、E741(歧义变量名 l/I/O)、
# E402(import 不在顶部，常见于先做 sys.path 注入)、F841(中间计算未用局部变量)。
# 真实缺陷类规则(F401 未用导入、F811 重定义、bare except 等)仍对 scripts 生效。
"scripts/*" = ["E701", "E702", "E741", "E402", "F841"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
# test_proxy.py: 根目录一次性调试脚本（探查已安装 oprim 的 dir()），非运行时代码。
# tasks/paper_tasks.py: 与当前 omodul.analyze_paper 契约严重脱节（旧版按 image_paths/
#   手动写 WrongQuestion，新版 workflow 已内部完成 OCR+认知更新+Paper 状态并返回
#   AnalyzePaperFindings），属需重写的集成缺陷而非 lint，且无测试覆盖，暂排除待真实修复。
# vendor/: 3O 内核 vendored 副本，不作为本仓检查目标；但通过 mypy_path 提供给
#   第一方代码做类型解析（否则 mypy 解析到 site-packages 里镜像构建时装入的旧版内核，
#   报出与运行时不符的 "Unexpected keyword argument"）。
# alembic/versions/: 一次性数据迁移脚本（多为自动生成/数据管线），与 scripts/ 同类。
exclude = "(main\\.py|test_engine\\.py|test_proxy\\.py|tasks/paper_tasks\\.py|mnt/.*|\\.venv/.*|data/.*|tests/.*|scripts/.*|vendor/.*|alembic/versions/.*)"
# 让 oprim/oskill/omodul/obase 解析到 vendor 副本（与运行时 sys.path 注入一致）。
mypy_path = "vendor"

# vendor 内核模块：静默跟随 import（提供准确签名给第一方代码，但不报告内核自身错误）。
[[tool.mypy.overrides]]
module = [
    "oprim",
    "oprim.*",
    "oskill",
    "oskill.*",
    "omodul",
    "omodul.*",
    "obase",
    "obase.*",
]
follow_imports = "silent"
ignore_errors = true
